--- a/web.html
+++ b/web.html
@@ -921,7 +921,7 @@ async function generateAIExplanation(question) {
         // 顯示加載動畫
         loadingOverlay.classList.remove('d-none');
 
-        const response = await fetch('https://back-9qb9.onrender.com', {
+        const response = await fetch('https://back-9qb9.onrender.com/api/generate-explanation', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
