--- a/web.html
+++ b/web.html
@@ -81,9 +81,10 @@
         .explanation-box {
             background-color: #f8f9fa;
             border-left: 5px solid #0d6efd;
-            padding: 15px;
+            padding: 20px;
             margin-top: 20px;
             border-radius: 5px;
+            overflow-y: auto; /* 內容過長時顯示滾動條 */
         }
         .correct {
             color: #198754;
@@ -941,7 +942,8 @@ async function generateAIExplanation(question) {
 
         const data = await response.json();
         const aiExplanation = data.explanation || '無法生成解析，請稍後再試';
-        document.getElementById('ai-explanation').innerHTML = aiExplanation;
+        const paragraphs = aiExplanation.split('\n').map(p => `<p>${p}</p>`).join('');
+        document.getElementById('ai-explanation').innerHTML = paragraphs;
     } catch (error) {
         console.error('AI解析生成失敗:', error);
         // 確保錯誤時也隱藏加載動畫
