--- a/web.html
+++ b/web.html
@@ -872,7 +872,7 @@
                                     <input class="form-check-input" type="radio" name="explanation-mode" id="database-mode" value="database" checked>
                                     <label class="form-check-label" for="database-mode">資料庫解析</label>
                                 </div>
-                                <div class="form-check form-check-inline">
+                                <div class="form-check form-check-inline" style="display: none;">
                                     <input class="form-check-input" type="radio" name="explanation-mode" id="ai-mode" value="ai">
                                     <label class="form-check-label" for="ai-mode">AI生成解析</label>
                                 </div>
