--- a/web.html
+++ b/web.html
@@ -778,7 +778,7 @@
         
         <div class="quiz-header">
             <h1><i class="fas fa-brain me-3"></i>iPAS AI應用規劃師專業練習系統</h1>
-            <p class="mb-0">經濟部產業人才能力鑑定 - 8月考試衝刺專用</p>
+            <p class="mb-0">經濟部產業人才能力鑑定 - 考試衝刺專用</p>
         </div>
         
         <!-- 題庫選擇區 -->
@@ -1032,7 +1032,7 @@
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <h5><i class="fas fa-target me-2 text-primary"></i>8月考試準備策略</h5>
+                    <h5><i class="fas fa-target me-2 text-primary"></i>考試準備策略</h5>
                     <div class="alert alert-info">
                         <strong>考試資訊：</strong>iPAS AI應用規劃師初級認證，建議準備時間：4-6週
                     </div>
@@ -1072,6 +1072,11 @@
                         <li>定期檢查學習統計</li>
                         <li>重點關注薄弱主題</li>
                         <li>匯出錯題進行紙本複習</li>
+                    </ul>
+                                        <ul>
+                        <li>開發者：ZN Studio</li>
+                        <li>版本：1.0.0</li>
+                        <li>本系統由本人獨立設計與開發，專為iPAS AI應用規劃師考試設計</li>
                     </ul>
                 </div>
                 <div class="modal-footer">
