--- a/full_survey.html
+++ b/full_survey.html
@@ -137,11 +137,10 @@
                     <p class="mb-0">獲得更多學習資源和優惠通知</p>
                 </div>
 
-                <!-- 問題6：LINE ID (UID) -->
+                <!-- 問題6：LINE ID (ID) -->
                 <div class="question-card">
-                    <div class="question-title">6. LINE User ID（選填）</div>
-                    <p class="text-muted mb-3"><small>提供您的 User ID (非自訂ID) 可獲得專屬錯題提醒和學習建議。此為U開頭的33位字串，我們將透過教學引導您取得。</small></p>
-                    <input type="text" class="survey-text-input" name="line_user_id" placeholder="請輸入您的LINE User ID (U...)" pattern="^U[0-9a-f]{32}$" title="請輸入U開頭的33位字串">
+                    <div class="question-title">6. LINE ID（選填）</div>
+                    <span class="text-muted">*為了提供個人化服務</span>
                 </div>
                 
                 <!-- 提交區域 -->
