--- a/full_survey.html
+++ b/full_survey.html
@@ -142,6 +142,10 @@
                     <div class="question-title">6. LINE ID（選填）</div>
                     <span class="text-muted">*為了提供個人化服務</span>
                 </div>
+                    <input type="text" 
+                           class="survey-text-input" 
+                           name="line_id" 
+                           placeholder="請輸入您的LINE ID "
                 
                 <!-- 提交區域 -->
                 <div class="submit-section">
