--- a/web.html
+++ b/web.html
@@ -2628,7 +2628,7 @@ selectDatabase(type) {
                         test_duration: this.state.currentTestResults.duration,
                         wrong_topics: this.state.currentTestResults.wrongTopics,
                         test_mode: this.state.currentTestResults.mode,
-                        database_type: this.state.currentTestResults.database
+                        database_type: this.state.currentTestResults.database,
                         // 新增：確保數據完整性
                         user_agent: navigator.userAgent,
                         page_url: window.location.href
