--- a/web.html
+++ b/web.html
@@ -1380,7 +1380,7 @@
                 surveyCompleted: localStorage.getItem('iPAS_survey_completed') === 'true',
                 surveyData: null,
                 currentTestResults: null,
-                webhookUrl: 'https://nickleo9.zeabur.app/webhook-test/ipas-survey'
+                webhookUrl: 'https://nickleo9.zeabur.app/webhook/ipas-survey'
             },
             
             // DOM 元素
