--- a/web.html
+++ b/web.html
@@ -2564,7 +2564,7 @@ selectDatabase(type) {
                     radio.addEventListener('change', () => {
                         const otherInput = document.getElementById('goalOtherInput');
                         if (otherInput) {
-                            if (radio.value === 'other' && radio.checked) {
+                            if (radio.value === '📝 其他' && radio.checked) {
                                 otherInput.style.display = 'block';
                                 otherInput.querySelector('input').required = true;
                             } else if (radio.checked) {
@@ -2582,7 +2582,7 @@ selectDatabase(type) {
                     radio.addEventListener('change', () => {
                         const otherInput = document.getElementById('timelineOtherInput');
                         if (otherInput) {
-                            if (radio.value === 'other' && radio.checked) {
+                            if (radio.value === '📝 其他' && radio.checked) {
                                 otherInput.style.display = 'block';
                                 otherInput.querySelector('input').required = true;
                             } else if (radio.checked) {
@@ -2600,7 +2600,7 @@ selectDatabase(type) {
                     radio.addEventListener('change', () => {
                         const otherInput = document.getElementById('paymentOtherInput');
                         if (otherInput) {
-                            if (radio.value === 'other' && radio.checked) {
+                            if (radio.value === '📝 其他' && radio.checked) {
                                 otherInput.style.display = 'block';
                                 otherInput.querySelector('input').required = true;
                             } else if (radio.checked) {
