--- a/quick_survey.html
+++ b/quick_survey.html
@@ -1,4 +1,4 @@
-<!-- quick_survey.html -->
+<!-- quick_survey.html - FINAL VERSION -->
 <div class="container py-4">
     <div class="survey-container">
         <div class="survey-header" style="background: linear-gradient(45deg, #00c6ff, #0072ff);">
@@ -18,12 +18,76 @@
                 <a href="#" id="skip-quick-survey" class="fw-bold text-decoration-none">⏭️ 或者直接跳過，查看基本測驗結果</a>
             </div>
             <form id="quickSurveyForm">
-                <div class="question-card"><div class="question-title">1. 相比上次，這次的測驗感覺如何？<span class="required-indicator">*</span></div><div class="options-container"><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="feeling" id="feeling1" value="😊 明顯進步，更有信心了" required><label class="survey-form-check-label" for="feeling1">😊 明顯進步，更有信心了</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="feeling" id="feeling2" value="📈 有些進步，持續努力中" required><label class="survey-form-check-label" for="feeling2">📈 有些進步，持續努力中</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="feeling" id="feeling3" value="😐 差不多，還在摸索" required><label class="survey-form-check-label" for="feeling3">😐 差不多，還在摸索</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="feeling" id="feeling4" value="😟 感覺退步了，需要調整方法" required><label class="survey-form-check-label" for="feeling4">😟 感覺退步了，需要調整方法</label></div></div></div>
-                <div class="question-card"><div class="question-title">2. 目前學習上最大的困擾是？<span class="required-indicator">*</span></div><div class="options-container"><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty1" value="🧠 某些概念總是搞不懂" required><label class="survey-form-check-label" for="difficulty1">🧠 某些概念總是搞不懂</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty2" value="⏰ 時間不夠，無法深入學習" required><label class="survey-form-check-label" for="difficulty2">⏰ 時間不夠，無法深入學習</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty3" value="🎯 不知道哪些是考試重點" required><label class="survey-form-check-label" for="difficulty3">🎯 不知道哪些是考試重點</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty4" value="📚 學習資源太分散" required><label class="survey-form-check-label" for="difficulty4">📚 學習資源太分散</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty5" value="💪 缺乏學習動力和方向" required><label class="survey-form-check-label" for="difficulty5">💪 缺乏學習動力和方向</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty6" value="✅ 目前沒有特別困擾" required><label class="survey-form-check-label" for="difficulty6">✅ 目前沒有特別困擾</label></div></div></div>
-                <div class="question-card"><div class="question-title">3. 如果我們推出AI一對一解題助教，您的興趣程度？<span class="required-indicator">*</span></div><div class="options-container"><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="ai_tutor_interest" id="interest1" value="🔥 非常有興趣，立即試用" required><label class="survey-form-check-label" for="interest1">🔥 非常有興趣，立即試用</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="ai_tutor_interest" id="interest2" value="👍 有興趣，想了解更多" required><label class="survey-form-check-label" for="interest2">👍 有興趣，想了解更多</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="ai_tutor_interest" id="interest3" value="🤔 可能會考慮，看價格和效果" required><label class="survey-form-check-label" for="interest3">🤔 可能會考慮，看價格和效果</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="ai_tutor_interest" id="interest4" value="😐 目前免費版就夠用了" required><label class="survey-form-check-label" for="interest4">😐 目前免費版就夠用了</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="ai_tutor_interest" id="interest5" value="🚫 不考慮付費功能" required><label class="survey-form-check-label" for="interest5">🚫 不考慮付費功能</label></div></div></div>
-                <div class="question-card"><div class="question-title">4. 持續使用後，您會推薦朋友使用嗎？<span class="required-indicator">*</span></div><div class="options-container"><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec1" value="🌟 一定會推薦（9-10分）" required><label class="survey-form-check-label" for="rec1">🌟 一定會推薦（9-10分）</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec2" value="👍 很可能推薦（7-8分）" required><label class="survey-form-check-label" for="rec2">👍 很可能推薦（7-8分）</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec3" value="😐 可能會推薦（5-6分）" required><label class="survey-form-check-label" for="rec3">😐 可能會推薦（5-6分）</label></div><div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec4" value="👎 不太會推薦（1-4分）" required><label class="survey-form-check-label" for="rec4">👎 不太會推薦（1-4分）</label></div></div></div>
-                <div class="question-card"><div class="question-title">5. 一句話建議：最希望我們改進什麼？（選填）</div><p class="text-muted mb-2"><small>例如：希望解析更詳細、介面更好用、題目更新等</small></p><textarea class="survey-text-input" name="suggestion" rows="3" placeholder="請在此輸入您的寶貴建議..."></textarea></div>
-                <div class="submit-section" style="background: linear-gradient(45deg, #00c6ff, #0072ff);"><h4 class="mb-3">🚀 感謝您的回饋！</h4><button type="submit" class="btn-submit" id="submitQuickSurveyBtn"><i class="fas fa-paper-plane me-2"></i>提交並查看分析報告</button></div>
+                <!-- 問題 1: 難易度評估 -->
+                <div class="question-card">
+                    <div class="question-title">1. 您覺得本次測驗的「難易度」如何？<span class="required-indicator">*</span></div>
+                    <div class="options-container">
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty_level" id="level1" value="🔥 太難了，很多題目都需要猜" required><label class="survey-form-check-label" for="level1">🔥 太難了，很多題目都需要猜</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty_level" id="level2" value="🤔 偏難，但仍在可以應對的範圍" required><label class="survey-form-check-label" for="level2">🤔 偏難，但仍在可以應對的範圍</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty_level" id="level3" value="👍 難度適中，很有挑戰性" required><label class="survey-form-check-label" for="level3">👍 難度適中，很有挑戰性</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty_level" id="level4" value="😊 偏簡單，大部分都能掌握" required><label class="survey-form-check-label" for="level4">😊 偏簡單，大部分都能掌握</label></div>
+                    </div>
+                </div>
+
+                <!-- 問題 2: 學習困擾 -->
+                <div class="question-card">
+                    <div class="question-title">2. 目前學習上最大的困擾是？<span class="required-indicator">*</span></div>
+                    <div class="options-container">
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty1" value="🧠 某些概念總是搞不懂" required><label class="survey-form-check-label" for="difficulty1">🧠 某些概念總是搞不懂</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty2" value="⏰ 時間不夠，無法深入學習" required><label class="survey-form-check-label" for="difficulty2">⏰ 時間不夠，無法深入學習</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty3" value="🎯 不知道哪些是考試重點" required><label class="survey-form-check-label" for="difficulty3">🎯 不知道哪些是考試重點</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty4" value="📚 學習資源太分散" required><label class="survey-form-check-label" for="difficulty4">📚 學習資源太分散</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty5" value="💪 缺乏學習動力和方向" required><label class="survey-form-check-label" for="difficulty5">💪 缺乏學習動力和方向</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="difficulty" id="difficulty6" value="✅ 目前沒有特別困擾" required><label class="survey-form-check-label" for="difficulty6">✅ 目前沒有特別困擾</label></div>
+                    </div>
+                </div>
+                
+                <!-- 問題 3: 最喜歡的功能 (新加入) -->
+                <div class="question-card">
+                    <div class="question-title">3. 最喜歡我們系統的哪個功能？<span class="required-indicator">*</span></div>
+                    <div class="options-container">
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="favorite_feature" id="fav1" value="🤖 AI出題與豐富題庫" required><label class="survey-form-check-label" for="fav1">🤖 AI出題與豐富題庫</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="favorite_feature" id="fav2" value="📈 測驗後的成績分析與解析" required><label class="survey-form-check-label" for="fav2">📈 測驗後的成績分析與解析</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="favorite_feature" id="fav3" value="🎯 個人化的錯題追蹤功能" required><label class="survey-form-check-label" for="fav3">🎯 個人化的錯題追蹤功能</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="favorite_feature" id="fav4" value="💻 簡潔流暢的操作介面" required><label class="survey-form-check-label" for="fav4">💻 簡潔流暢的操作介面</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="favorite_feature" id="fav5" value="其它" required><label class="survey-form-check-label" for="fav5">其它 (可在下方建議中補充)</label></div>
+                    </div>
+                </div>
+
+                <!-- 問題 4: 期待的新功能 -->
+                <div class="question-card">
+                    <div class="question-title">4. 最期待我們未來推出什麼新功能？<span class="required-indicator">*</span></div>
+                    <div class="options-container">
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="new_feature_request" id="req1" value="💬 AI一對一解題助教" required><label class="survey-form-check-label" for="req1">💬 AI一對一解題助教</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="new_feature_request" id="req2" value="📂 錯題匯出與複習排程" required><label class="survey-form-check-label" for="req2">📂 錯題匯出與複習排程</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="new_feature_request" id="req3" value="🏆 學習排名與徽章系統" required><label class="survey-form-check-label" for="req3">🏆 學習排名與徽章系統</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="new_feature_request" id="req4" value="🌐 更多元的情境應用題庫" required><label class="survey-form-check-label" for="req4">🌐 更多元的情境應用題庫</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="new_feature_request" id="req5" value="其它" required><label class="survey-form-check-label" for="req5">其它 (可在下方建議中補充)</label></div>
+                    </div>
+                </div>
+
+                <!-- 問題 5: 推薦意願 (NPS) -->
+                <div class="question-card">
+                    <div class="question-title">5. 基於整體體驗，您會推薦朋友使用嗎？<span class="required-indicator">*</span></div>
+                    <div class="options-container">
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec1" value="🌟 一定會推薦（9-10分）" required><label class="survey-form-check-label" for="rec1">🌟 一定會推薦（9-10分）</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec2" value="👍 很可能推薦（7-8分）" required><label class="survey-form-check-label" for="rec2">👍 很可能推薦（7-8分）</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec3" value="😐 可能會推薦（5-6分）" required><label class="survey-form-check-label" for="rec3">😐 可能會推薦（5-6分）</label></div>
+                        <div class="survey-form-check"><input class="survey-form-check-input" type="radio" name="recommendation_score" id="rec4" value="👎 不太會推薦（1-4分）" required><label class="survey-form-check-label" for="rec4">👎 不太會推薦（1-4分）</label></div>
+                    </div>
+                </div>
+
+                <!-- 問題 6: 開放式建議 -->
+                <div class="question-card">
+                    <div class="question-title">6. 如果能實現一個願望，您最希望我們改進或增加什麼？（選填）</div>
+                    <p class="text-muted mb-2"><small>任何建議都非常歡迎！例如：希望解析更詳細、增加模擬考試模式等</small></p>
+                    <textarea class="survey-text-input" name="suggestion" rows="3" placeholder="請在此輸入您的寶貴建議..."></textarea>
+                </div>
+
+                <div class="submit-section" style="background: linear-gradient(45deg, #00c6ff, #0072ff);">
+                    <h4 class="mb-3">🚀 感謝您的回饋！</h4>
+                    <button type="submit" class="btn-submit" id="submitQuickSurveyBtn"><i class="fas fa-paper-plane me-2"></i>提交並查看分析報告</button>
+                </div>
             </form>
         </div>
     </div>
