--- a/web.html
+++ b/web.html
@@ -3293,6 +3293,44 @@ updateStats() {
                     this.showLoginButton();
                 }
             },
+
+           // 在 LoginManager 中新增檢查會員狀態的函數
+async checkMemberStatus(userId) {
+  try {
+    const response = await fetch('https://nickleo9.zeabur.app/webhook/check-member-status', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ userId: userId })
+    });
+    return await response.json();
+  } catch (error) {
+    console.log('查詢會員狀態失敗');
+    return { isPaid: false, memberLevel: '免費會員' };
+  }
+},
+            // 使用次數管理
+const UsageManager = {
+  checkDailyUsage() {
+    const today = new Date().toDateString();
+    const usageKey = `daily_usage_${today}`;
+    return parseInt(localStorage.getItem(usageKey) || '0');
+  }
+  
+  incrementUsage() {
+    const today = new Date().toDateString();
+    const usageKey = `daily_usage_${today}`;
+    const currentUsage = this.checkDailyUsage();
+    localStorage.setItem(usageKey, (currentUsage + 1).toString());
+  },
+  
+  canUseSystem(isPaidMember) {
+    if (isPaidMember) return true;
+    return this.checkDailyUsage() < 5;
+  }
+};
+
+
+
             
             // 顯示用戶資訊
             showUserInfo(user) {
@@ -3366,6 +3404,7 @@ updateStats() {
     <!-- ✨ 新增：登入功能 JavaScript END -->
 </body>
 </html>
+
 
 
 
