--- a/web.html
+++ b/web.html
@@ -3250,7 +3250,7 @@ updateStats() {
         const LoginManager = {
             // Line Login 設定
             LINE_CHANNEL_ID: '2008218944',  // ⚠️ 記得替換
-            LINE_CALLBACK_URL: 'https://znstudio216.com/login-callback.html',
+            LINE_CALLBACK_URL: 'https://nickleo9.github.io/GenAI/login-callback.html',
             
             // n8n Webhook URL
             N8N_WEBHOOK_URL: 'https://nickleo9.zeabur.app/webhook/line-login',  // ⚠️ 記得替換
@@ -3421,6 +3421,7 @@ updateStats() {
     <!-- ✨ 新增：登入功能 JavaScript END -->
 </body>
 </html>
+
 
 
 
