--- a/login-callback.html
+++ b/login-callback.html
@@ -261,10 +261,7 @@
 
         // 顯示除錯資訊（開發時可用）
         debugDiv.innerHTML = `
-            <strong>除錯資訊：</strong><br>
-            Code: ${code ? '✓ 已取得' : '✗ 未取得'}<br>
-            State: ${state ? '✓ 已取得' : '✗ 未取得'}<br>
-            目標頁面: ${REDIRECT_URL}
+            目標頁面: 模擬考系統
         `;
 
         // 手動跳轉按鈕
