--- a/web.html
+++ b/web.html
@@ -3291,7 +3291,7 @@ const topicStats = {};
         }
     } // <-- 這是 syncPracticeRecord 函式的結束
             
-        };<--- 這是 iPASQuizApp 物件的結束
+        };  // <--- 這是 iPASQuizApp 物件的結束
         
         // 初始化應用
         document.addEventListener('DOMContentLoaded', () => {
@@ -3497,6 +3497,7 @@ const topicStats = {};
     <!-- ✨ 新增：登入功能 JavaScript END -->
 </body>
 </html>
+
 
 
 
