--- a/google-callback.html
+++ b/google-callback.html
@@ -248,7 +248,7 @@
 
             userInfoDiv.classList.add('show');
             
-            const userPicture = document.getElementById('userPicture');
+            const userPicture = document.getElementById('user-avatar');
             const userName = document.getElementById('userName');
             const memberBadge = document.getElementById('memberBadge');
             const memberLevel = user.member_level || '免費會員';
