--- a/web.html
+++ b/web.html
@@ -3526,6 +3526,8 @@ async updateWrongQuestions() {
      
             // 顯示用戶資訊 (更新，兼容 Line 和 Google 的資料結構)
             showUserInfo(user) {
+
+                console.log('✅ showUserInfo 函式已啟動，用戶名:', user.displayName || user.name);
                 // 隱藏登入區塊
                 const loginSection = document.getElementById('login-section');
                 if (loginSection) loginSection.classList.add('d-none');
@@ -3611,3 +3613,4 @@ async updateWrongQuestions() {
     <!-- ✨ 新增：登入功能 JavaScript END -->
 </body>
 </html>
+
