feat: add 3-sec delay for guest explanation, export limits, update VIP modal

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                     <div class="col-6">
                         <div class="feature-item">
                             <i class="fas fa-check-circle text-success me-2"></i>
-                            模擬考試模式
+                            無限次測驗
                         </div>
                     </div>
                     <div class="col-6">
@@ -631,25 +631,19 @@
                     <div class="col-6">
                         <div class="feature-item">
                             <i class="fas fa-check-circle text-success me-2"></i>
-                            錯題集匯出
+                            無限次匯出錯題
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="feature-item">
                             <i class="fas fa-check-circle text-success me-2"></i>
-                            AI 弱點分析
+                            即時解析 (免等待)
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="feature-item">
-                            <i class="fas fa-check-circle text-success me-2"></i>
-                            即時題目解析
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="feature-item">
-                            <i class="fas fa-check-circle text-success me-2"></i>
-                            完整學習分析
+                    <div class="col-12">
+                        <div class="feature-item text-muted small">
+                            <i class="fas fa-hourglass-half me-2"></i>
+                            AI 弱點分析 (即將推出)
                         </div>
                     </div>
                 </div>
