ui: update free member feature limits display

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                     <strong>免費會員功能限制</strong>
                 </h6>
                 <ul class="mb-2" style="font-size: 0.9rem;">
-                    <li>❌ 無法使用模擬考試模式</li>
+                    <li>✅ 模擬考試模式 (5次/月)</li>
                     <li>❌ 無法雲端同步學習進度</li>
-                    <li>❌ 無法匯出錯題集</li>
+                    <li>✅ 匯出錯題集 (5次/月)</li>
                     <li>❌ 社群題目解析需等到晚上</li>
                 </ul>
                 <button class="btn btn-warning btn-sm" onclick="openUpgradeModal()">
@@ -619,13 +619,13 @@
                     <div class="col-6">
                         <div class="feature-item">
                             <i class="fas fa-check-circle text-success me-2"></i>
-                            無限次測驗
+                            無限次練習/複習
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="feature-item">
                             <i class="fas fa-check-circle text-success me-2"></i>
-                            雲端同步進度
+                            模擬考試 (5次/月)
                         </div>
                     </div>
                     <div class="col-6">
@@ -705,9 +705,9 @@
                                         <i class="fas fa-check text-success me-2"></i>
                                         本地錯題記錄
                                     </li>
-                                    <li class="mb-2 text-muted">
-                                        <i class="fas fa-times text-danger me-2"></i>
-                                        模擬考試模式
+                                    <li class="mb-2">
+                                        <i class="fas fa-check text-success me-2"></i>
+                                        模擬考試模式 (5次/月)
                                     </li>
                                     <li class="mb-2 text-muted">
                                         <i class="fas fa-times text-danger me-2"></i>
